create API update status workorder
